added an assets directory with pictures and removed picture weblinks

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
 
     <!-- Name and description of recipe -->
     <h1>Lasagna</h1>
-    <img src="https://assets.icanet.se/e_sharpen:80,q_auto,dpr_1.25,w_718,h_718,c_lfill/imagevaultfiles/id_223426/cf_259/klassisk_lasagne.jpg"
+    <img src="../assets/lasagne.jpg"
         alt="Picture of a lasagna">
     <h2>Classical Lasagna</h2>
     <p>Classic lasagna is a dish you never get tired of, is it? With this recipe, your lasagne will be perfect with a
