added Stroganoff and Drumsticks recipee, linked all in index.html and put the links in a <ul>

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,47 +12,50 @@
 
     <!-- Name and description of recipe -->
     <h1>Lasagna</h1>
-    <img src="../assets/lasagne.jpg"
-        alt="Picture of a lasagna">
+    <img src="../assets/lasagne.jpg" alt="Picture of a lasagna">
     <h2>Classical Lasagna</h2>
     <p>Classic lasagna is a dish you never get tired of, is it? With this recipe, your lasagne will be perfect with a
         soft and delicious texture and it also has a sweet and exemplary taste. The Parmesan cheese is the icing on the
         cake!</p>
 
-        <!-- List of Ingredients -->
-        <h3>Ingredients</h3>
-        <ul>
-            <li>2 Onions</li>
-            <li>2 Cloves of Garlic</li>
-            <li>500g of Minced meat</li>   
-            <li>1tbs of Olive oil</li>
-            <li>4tbs of Tomato puré</li>
-            <li>1tsp of Thyme</li>
-            <li>1tsp of Rosemary</li>
-            <li>500g of Crushed tomatoes</li>
-            <li>1 cube of Beef broth</li>
-            <li>Salt and pepper</li>
-            <li>9 Plates of lasagna</li>
-        </ul>
-        <h3>Sauce</h3>
-        <ul>
-            <li>6tbs of Shortening</li>
-            <li>6tbs Flour</li>
-            <li>1L of Milk</li>
-            <li>Salt and pepper</li>
-            <li>2dl of Parmesan</li>
-        </ul>
+    <!-- List of Ingredients -->
+    <h3>Ingredients for 4 portions</h3>
+    <ul>
+        <li>2 Onions</li>
+        <li>2 Cloves of Garlic</li>
+        <li>500g of Minced meat</li>
+        <li>1tbs of Olive oil</li>
+        <li>4tbs of Tomato puré</li>
+        <li>1tsp of Thyme</li>
+        <li>1tsp of Rosemary</li>
+        <li>500g of Crushed tomatoes</li>
+        <li>1 cube of Beef broth</li>
+        <li>Salt and pepper</li>
+        <li>9 Plates of lasagna</li>
+    </ul>
+    <h3>Sauce</h3>
+    <ul>
+        <li>6tbs of Shortening</li>
+        <li>6tbs Flour</li>
+        <li>1L of Milk</li>
+        <li>Salt and pepper</li>
+        <li>2dl of Parmesan</li>
+    </ul>
 
-        <!-- Cooking Instructions -->
-        <h3>Cooking Instructions</h3>
-        <ol>
-            <li>Set the oven to 175°C.</li>
-            <li>Peel and chop the onion and garlic. Fry minced meat, onion and garlic in the oil in a frying pan. Add tomato puree that can be minced with the minced meat. Season with thyme and rosemary. Add crushed tomatoes and bouillon cubes, let it cook for about 10 minutes. Season with salt and pepper.</li>
-            <li>Sauce: Melt the shortening and stir in the flour. Dilute with the milk while whisking. Let the sauce cook for about 5 minutes. Season with salt and pepper.</li>
-            <li>Wrap sauce, lasagne plates and minced meat sauce in an ovenproof dish. Finish with sauce and parmesan cheese.</li>
-            <li>Put the lasagna in the middle of the oven for about 40 minutes.</li>
-            <li>To serve: Serve the lasagna with salad.</li>
-        </ol>
+    <!-- Cooking Instructions -->
+    <h3>Cooking Instructions</h3>
+    <ol>
+        <li>Set the oven to 175°C.</li>
+        <li>Peel and chop the onion and garlic. Fry minced meat, onion and garlic in the oil in a frying pan. Add tomato
+            puree that can be minced with the minced meat. Season with thyme and rosemary. Add crushed tomatoes and
+            bouillon cubes, let it cook for about 10 minutes. Season with salt and pepper.</li>
+        <li>Sauce: Melt the shortening and stir in the flour. Dilute with the milk while whisking. Let the sauce cook
+            for about 5 minutes. Season with salt and pepper.</li>
+        <li>Wrap sauce, lasagne plates and minced meat sauce in an ovenproof dish. Finish with sauce and parmesan
+            cheese.</li>
+        <li>Put the lasagna in the middle of the oven for about 40 minutes.</li>
+        <li>To serve: Serve the lasagna with salad.</li>
+    </ol>
     <a href="/index.html">Back to homepage</a>
 </body>
 
