--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stroganoff</title>
 </head>
+
 <body>
-    <h1>Quick-cooked sausage stroganoff</h1>
-    
+    <!-- Name and description of recipe -->
+    <h1>Sausage Stroganoff</h1>
+    <img src="../assets/stroganoff.jpg" alt="Stroganoff">
+    <h2>Quick-cooked Sausage Stroganoff</h2>
+    <p>Sausage stroganoff is a classic home cooking when it is at its best. Especially when it's quick to make like
+        this! Shred the sausage, slice the onion and fry in a little oil. Lower the heat and add tomatoes, tomato puree,
+        oregano, paprika powder, crème fraiche and crumbled bouillon cubes and simmer for about 5 minutes. Ready in no
+        time!</p>
+
+    <!-- List of Ingredients -->
+    <h3>Ingredients for 4 Portions</h3>
+    <ul>
+        <li>1 Onion</li>
+        <li>550g Sausage</li>
+        <li>500g Tomato Passata</li>
+        <li>1tsp Oil</li>
+        <li>2tbs Tomato Puré</li>
+        <li>1tsp Oregano</li>
+        <li>1tbs Paprika Powder</li>
+        <li>1dl Créme Fraiche</li>
+        <li>1 cube of Beef Stock</li>
+        <li>4 portions of Rice</li>
+    </ul>
+
+    <!-- Cooking Instructions -->
+    <h3>Cooking Instructions</h3>
+    <ol>
+        <li>Peel and slice the onion. Shred the sausage.</li>
+        <li>Fry sausage and onion in the oil until it gets a little color. Lower the heat, stir in the tomatoes, tomato
+            puree, spices, crème fraiche and crumbled bouillon cubes. Let simmer for about 5 minutes.</li>
+        <li>Boil the rice according to the instructions on the package.</li>
+        <li>Serve the sausage stroganoff with the rice</li>
+    </ol>
+
+
 
     <a href="/index.html">Back to homepage</a>
 </body>
+
 </html>
