--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/lasagna.html">Lasagna</a>
-    
+    <ul>
+        <a href="/recipes/lasagna.html">Lasagna</a>
+        <a href="/recipes/stroganoff.html">Quick-cooked Sausage Stroganoff</a>
+        <a href="/recipes/drumsticks.html">Baked Chicken Drumsticks</a>
+    </ul>
 </body>
+
 </html>
