fixed the <ul> in index.html by adding <li> so that it shows up as a list, added information to the readme.md file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <a href="/recipes/lasagna.html">Lasagna</a>
-        <a href="/recipes/stroganoff.html">Quick-cooked Sausage Stroganoff</a>
-        <a href="/recipes/drumsticks.html">Baked Chicken Drumsticks</a>
+        <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="/recipes/stroganoff.html">Quick-cooked Sausage Stroganoff</a></li>
+        <li><a href="/recipes/drumsticks.html">Baked Chicken Drumsticks</a></li>
     </ul>
 </body>
 
