Added a css file to the project and created classes that apply to the recipe pages

--- a/recipes/drumsticks.html
+++ b/recipes/drumsticks.html
@@ -5,22 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Baked chicken drumsticks</title>
 </head>
 
 <body>
     <!-- Name and description of recipe -->
 
-    <h1>Baked Chicken Drumsticks</h1>
+    <h1 class="title-header">Baked Chicken Drumsticks</h1>
     <img src="../assets/drumsticks.jpg" alt="Baked chicken drumsticks">
-    <h2>Baked Chicken Drumsticks</h2>
-    <p>Cook crispy oven-baked chicken drumsticks seasoned with rosemary. Here is a basic recipe for oven-roasted chicken
+    <h2 class="title-header-small">Baked Chicken Drumsticks</h2>
+    <p class="desc">Cook crispy oven-baked chicken drumsticks seasoned with rosemary. Here is a basic recipe for oven-roasted chicken
         drumsticks that you can serve with your favorite accessories, such as potatoes or rice. This recipe is part of
         the Sunday prep where you prepare the basics for four meals through a little prep.</p>
 
     <!-- List of Ingredients -->
 
-    <h2>Ingredients for 8 portions</h2>
+    <div class="container">
+    <h2 class="container-header">Ingredients for 8 portions</h2>
     <ul>
         <li>1.7kg of Chicken Drumsticks</li>
         <li>75g of Butter</li>
@@ -29,9 +31,11 @@
         <li>1 1/2tsp of salt</li>
         <li>1/2tsp pepper</li>
     </ul>
-
+</div>
     <!-- Cooking Instructions -->
 
+    <div class="container">
+        <h3 class="container-header"> Cooking Instructions</h3>
     <ol>
         <li>Set the oven to 225 ° C.</li>
         <li>Brown or melt the butter in a saucepan. Remove from the heat and stir in the soy sauce. Brush the chicken
@@ -39,8 +43,9 @@
         <li>Place in the middle of the oven for about 20 minutes or until the inertia temperature is 82 ° C next to the
             bone.</li>
     </ol>
+</div>
 
-    <a href="/index.html">Back to homepage</a>
+    <a href="/index.html" class="recipe-link">Back to homepage</a>
 </body>
 
 </html>
