--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna</title>
 </head>
 
 <body>
 
     <!-- Name and description of recipe -->
-    <h1>Lasagna</h1>
+    <h1 class="title-header">Lasagna</h1>
     <img src="../assets/lasagne.jpg" alt="Picture of a lasagna">
-    <h2>Classical Lasagna</h2>
-    <p>Classic lasagna is a dish you never get tired of, is it? With this recipe, your lasagne will be perfect with a
+    <h2 class="title-header-small">Classical Lasagna</h2>
+    <p class="desc">Classic lasagna is a dish you never get tired of, is it? With this recipe, your lasagne will be perfect with a
         soft and delicious texture and it also has a sweet and exemplary taste. The Parmesan cheese is the icing on the
         cake!</p>
 
     <!-- List of Ingredients -->
-    <h3>Ingredients for 4 portions</h3>
+    <div class="container">
+    <h3 class="container-header">Ingredients for 4 portions</h3>
     <ul>
         <li>2 Onions</li>
         <li>2 Cloves of Garlic</li>
@@ -33,7 +35,7 @@
         <li>Salt and pepper</li>
         <li>9 Plates of lasagna</li>
     </ul>
-    <h3>Sauce</h3>
+    <h3 class="container-header">Sauce</h3>
     <ul>
         <li>6tbs of Shortening</li>
         <li>6tbs Flour</li>
@@ -41,9 +43,11 @@
         <li>Salt and pepper</li>
         <li>2dl of Parmesan</li>
     </ul>
+</div>
 
     <!-- Cooking Instructions -->
-    <h3>Cooking Instructions</h3>
+    <div class="container">
+    <h3 class="container-header">Cooking Instructions</h3>
     <ol>
         <li>Set the oven to 175°C.</li>
         <li>Peel and chop the onion and garlic. Fry minced meat, onion and garlic in the oil in a frying pan. Add tomato
@@ -56,7 +60,10 @@
         <li>Put the lasagna in the middle of the oven for about 40 minutes.</li>
         <li>To serve: Serve the lasagna with salad.</li>
     </ol>
-    <a href="/index.html">Back to homepage</a>
+</div>
+
+
+    <a href="/index.html" class="recipe-link">Back to homepage</a>
 </body>
 
 </html>
