Added CSS styling to index website aswell as a banner and navbar. Removed the recipes links

--- a/recipes/drumsticks.html
+++ b/recipes/drumsticks.html
@@ -13,7 +13,7 @@
     <!-- Name and description of recipe -->
 
     <h1 class="title-header">Baked Chicken Drumsticks</h1>
-    <img src="../assets/drumsticks.jpg" alt="Baked chicken drumsticks">
+    <img src="../assets/drumsticks.jpg" alt="Baked chicken drumsticks" class="rec-img">
     <h2 class="title-header-small">Baked Chicken Drumsticks</h2>
     <p class="desc">Cook crispy oven-baked chicken drumsticks seasoned with rosemary. Here is a basic recipe for oven-roasted chicken
         drumsticks that you can serve with your favorite accessories, such as potatoes or rice. This recipe is part of
