--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,7 @@
 
     <!-- Name and description of recipe -->
     <h1 class="title-header">Lasagna</h1>
-    <img src="../assets/lasagne.jpg" alt="Picture of a lasagna">
+    <img src="../assets/lasagne.jpg" alt="Picture of a lasagna" class="rec-img">
     <h2 class="title-header-small">Classical Lasagna</h2>
     <p class="desc">Classic lasagna is a dish you never get tired of, is it? With this recipe, your lasagne will be perfect with a
         soft and delicious texture and it also has a sweet and exemplary taste. The Parmesan cheese is the icing on the
