--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Name and description of recipe -->
     <h1 class="title-header">Sausage Stroganoff</h1>
-    <img src="../assets/stroganoff.jpg" alt="Stroganoff">
+    <img src="../assets/stroganoff.jpg" alt="Stroganoff" class="rec-img">
     <h2 class="title-header-small">Quick-cooked Sausage Stroganoff</h2>
     <p class="desc">Sausage stroganoff is a classic home cooking when it is at its best. Especially when it's quick to
         make like
