--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <nav class="nav">
+        <ul>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./recipes.html">Recipes</a></li>
+            <li><a href="./index.html">Home</a></li>
+        </ul>
+    </nav>
+    <h1 class="index-header">Odin Recipes</h1>
+    <div class="banner-container">
+        <img src="./assets/Chicken.jpg" alt="Burger">
+        <img src="./assets/salad.jpg" alt="Steak">
+        <img src="./assets/pizza.jpg" alt="Stew">
+    </div>
+    <!-- <ul>
         <li><a href="/recipes/lasagna.html">Lasagna</a></li>
         <li><a href="/recipes/stroganoff.html">Quick-cooked Sausage Stroganoff</a></li>
         <li><a href="/recipes/drumsticks.html">Baked Chicken Drumsticks</a></li>
-    </ul>
+    </ul> -->
 </body>
 
 </html>
