added About and recipe page and styled about page with container and nav bar

--- a/about.html
+++ b/about.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>About</title>
 </head>
 <body>
-    
+    <nav class="nav">
+        <ul>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./recipes.html">Recipes</a></li>
+            <li><a href="./index.html">Home</a></li>
+        </ul>
+    </nav>
+
+    <h1 class="index-header">About</h1>
+
+    <div class="about-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non iusto nam pariatur harum. Sed eos officiis blanditiis atque incidunt dolores aut aliquid! Et voluptates perspiciatis quos est corrupti exercitationem beatae minima dolor hic eaque. Sunt totam, at, quam dolor laudantium odit accusamus porro, blanditiis mollitia nulla beatae. Laboriosam, similique voluptate velit temporibus ipsa tempora nihil consequuntur? Deserunt accusamus harum sint veniam eos nesciunt perferendis blanditiis, quae laboriosam libero, alias vel commodi dicta odio, perspiciatis id. Eum quaerat recusandae voluptatibus vitae perferendis, voluptas dolores consectetur maxime est sit fugiat quis, repellendus praesentium debitis at! Assumenda labore tempore esse sequi aspernatur porro?
+    </div>
 </body>
 </html>
