Added recipes to the recipe page

--- a/recipes.html
+++ b/recipes.html
@@ -14,9 +14,21 @@
             <li><a href="./recipes.html">Recipes</a></li>
             <li><a href="./index.html">Home</a></li>
         </ul>
+        <h1 class="index-header">Recipes</h1>
     </nav>
+    <ul class="recipe">
+        <li>
+            <a href="./recipes/lasagna.html"><img src="./assets/lasagne.jpg" alt="lasagne"></a>
+        </li>
+        <li>
+            <a href="./recipes/stroganoff.html"><img src="./assets/stroganoff.jpg" alt="Stroganoff"></a>
+        </li>
+        <li>
+            <a href="./recipes/drumsticks.html"><img src="./assets/drumsticks.jpg" alt="Drumstricks"></a>
+        </li>
+    </ul>
+    
 
-    <h1 class="index-header">Recipes</h1>
     
 </body>
 </html>
