--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -63,7 +63,7 @@
 </div>
 
 
-    <a href="/index.html" class="recipe-link">Back to homepage</a>
+    <a href="/recipes.html" class="recipe-link">Back to Recipes</a>
 </body>
 
 </html>
