--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -54,7 +54,7 @@
 
 
 
-    <a href="/index.html" class="recipe-link">Back to homepage</a>
+    <a href="/recipes.html" class="recipe-link">Back to Recipes</a>
 </body>
 
 </html>
