added Cinnamon Bun recipe

--- a/recipes.html
+++ b/recipes.html
@@ -26,6 +26,9 @@
         <li>
             <a href="./recipes/drumsticks.html"><img src="./assets/drumsticks.jpg" alt="Drumstricks"></a>
         </li>
+        <li>
+            <a href="./recipes/cinnamon-bun.html"><img src="./assets/cinammon-bun.jpg" alt="Cinnamon Bun"></a>
+        </li>
     </ul>
     
 
