added Rafaello Cake recipe

--- a/recipes.html
+++ b/recipes.html
@@ -29,6 +29,9 @@
         <li>
             <a href="./recipes/cinnamon-bun.html"><img class="recipe-image" src="./assets/cinammon-bun.jpg" alt="Cinnamon Bun"></a>
         </li>
+        <li>
+            <a href="./recipes/rafaello-cake.html"><img class="recipe-image" src="./assets/rafaello-cake.webp" alt="Rafaello cake"></a>
+        </li>
     </ul>
     
 
