Fixed a missing bracket in a recipe

--- a/recipes/rafaello-cake.html
+++ b/recipes/rafaello-cake.html
@@ -65,7 +65,7 @@
             <li> Separate egg yolks and egg whites. Whisk the egg whites to a stiff foam. Add the sugar, a little at a
                 time. Whisk until you get a shiny meringue.</li>
             <li>Whisk egg yolks a little lightly in a bowl and mix into the meringue.</li>
-            <li>Carefully turn down the ground almonds and wheat flour and stir gently to a smooth batter./li>
+            <li>Carefully turn down the ground almonds and wheat flour and stir gently to a smooth batter.</li>
             <li>Pour the batter into the mold and bake in the middle of the oven for about 20-25 minutes. (Do not open
                 the oven while the cake is baking) Check with a test strip if the cake is completely dry. Allow to cool
                 completely before dividing it into three parts.</li>
